--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 </p>
                 <p class="developer">
                     Made with
-                    <a target="_blank" href="hhttps://vk.com/kornilsergeevich">Kornilov Ruslan</a>
+                    <a target="_blank" href="https://vk.com/kornilsergeevich">Kornilov Ruslan</a>
                 </p>
             </div>
             <ul class="contacts">
